<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp">

        <ImageView
            android:id="@+id/iv_app_logo"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="73dp"
            android:src="@drawable/logo_app"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            style="@style/tv_h4_16"
            android:id="@+id/tv_title_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="27dp"
            android:text="@string/register_title"
            android:textColor="@color/blue_dark"
            app:layout_constraintTop_toBottomOf="@+id/iv_app_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            style="@style/tv_body_regular_14"
            android:id="@+id/tv_subtitle_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:text="@string/register_subtitle"
            android:textColor="@color/grey_dark"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_login"
            style="?attr/materialCardViewElevatedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:cardElevation="6dp"
            app:cardCornerRadius="18dp"
            android:backgroundTint="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle_login"
            app:layout_constraintStart_toStartOf="@id/tv_subtitle_login"
            app:layout_constraintEnd_toEndOf="@id/tv_subtitle_login">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="22dp">

                <TextView
                    style="@style/tv_h5_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/fullname"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ed_name_layout"
                    style="@style/MyTextInputLayout"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:hint="@string/fullname_hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/tv_h5_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/username"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ed_username_layout"
                    style="@style/MyTextInputLayout"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username_hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/tv_h5_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/email"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ed_email_layout"
                    style="@style/MyTextInputLayout"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email_hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/tv_h5_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/password"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ed_password_layout"
                    style="@style/MyTextInputLayout"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/password_hint"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="48dp"
                    app:cornerRadius="16dp"
                    android:backgroundTint="@color/blue"
                    android:text="@string/register"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            style="@style/tv_body_medium_16"
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="74dp"
            android:text="@string/account_login"
            android:textColor="@color/black"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/card_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>